# fastapi-starter

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  dev_server.py  main.py
app/api/: router.py
app/api/endpoints/files/: files_router.py  files_service.py
app/api/endpoints/health/: health_router.py
app/api/endpoints/users/: users_router.py  users_service.py
app/common/: logger.py
app/entities/: user.py
app/entities/orm/: orm_model.py
db/: .env  docker-compose.yml
db/init/: 10.my_db.sql
openapi-generator/: openapitools.json  package-lock.json  package.json
tests/: data_helper.py
tests/api/endpoints/health/: test_health_controller.py  test_health_router.py
tests/api/endpoints/users/: test_users_service.py
tests/data/: file-01.txt  file-02.txt
tests/data/api/service/users_service/: user.csv
