[project]
name = "fastapi-starter"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.13"
scripts = { dev = "app.dev_server:start" }
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "cryptography (>=45.0.4,<46.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pyright (>=1.1.405,<2.0.0)",
    "ruff (>=0.13.1,<0.14.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.2"
packages = [{ include = "app" }]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = ["-v", "-s"]
