[project]
name = "fastapi-starter"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.14"
scripts = { dev = "app.dev_server:start" }
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "cryptography (>=46.0.1,<47.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pyright (>=1.1.405,<2.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.2"
packages = [{ include = "app" }]

[tool.ruff]
line-length = 120

[tool.pytest]
addopts = ["-v", "-s"]
